2016-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix SourceForge bug #376 "SIGABRT
	in magick/colorspace.c:1052".

	* magick/shear.c (RotateImage): Fix SourceForge bug #375 "SIGABRT
	in magick/image.c:1230".

	* coders/sun.c (DecodeImage): Fix SourceForge bug #368
	"out-of-bounds read in coders/sun.c:223:17" and bug #363
	"out-of-bounds read in coders/sun.c:221:16".

2016-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (GetUserSpaceCoordinateValue): Fix stack buffer
	overflow when reading file 'aaphrbkwwe.svg.-632425326915265752'
	from CVE-2016-2317 problem files.  Partial fix for SourceForge bug
	#358 "CVE-2016-2317 - SVG heap/stack buffer overflows".

	* magick/utility.c (MagickGetToken): New private function to
	replace GetToken().  The new function accepts a token buffer
	length argument.  GetToken() is modified to assume a token buffer
	length 'MaxTextExtent'.  All code using GetToken() is updated to
	use MagickGetToken().

	* coders/svg.c: Fix heap buffer overflow when reading file
	"aaphrbkwwe.svg.4495884156523242589" from CVE-2016-2317 problem
	files.  Partial fix for SourceForge bug #358 "CVE-2016-2317 - SVG
	heap/stack buffer overflows".

2016-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (ReadPSDImage): Fix SourceForge bug #341
	"out-of-bounds read in coders/psd.c:1435".
	(WriteWhiteBackground): Fix SourceForge bug #350 "SEGV in
	coders/psd.c:1685".
	(DecodeImage): Fix SourceForge bug #351 "heap-buffer-overflow in
	coders/psd.c:142".
	(ReadPSDImage): Fix SourceForge bug #342 "out-of-bounds write in
	coders/psd.c:892"

	* coders/xcf.c (load_tile): Fix SourceForge bug #337
	"heap-buffer-overflow in coders/xcf.c:373".

	* coders/pict.c (WritePICTImage): Fix SourceForge bug #340
	"out-of-bounds write in coders/pict.c:1929".

	* coders/pdb.c (WritePDBImage): Fix SourceForge bug #348
	"heap-buffer-overflow in coders/pdb.c:949:26".
